# dsoda

./: LICENSE  Makefile  README  config.h.in  configure.in  display.h  glview.c  gui.c  gui.h  hantek_gui.c  hantek_gui.h  hantek_io.c  hantek_io.h  hantek_thread.c  hantek_thread.h  io.c  io.h  local.h  mkpkg.sh  thread.c  thread.h
misc/: dso2250.rules  dso2250_firmware.hex  dso2250_loader.hex  dsoda.1  dsodafw  extract.pl  extractor.pl  loadfw.sh
